# azuki-tcg

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  docker-compose.debug.nosan.yml  docker-compose.debug.yml  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  qq  tsconfig.base.json
.claude/docs/: effects-checklist.md  effects.md  web-service.md
.codex/docs/: azuki-card-dataset-notes.md  azuki-env-milestones.md  azuki-env-tech-spec.md  azuki-observations.md  azuki-product-spec.md  azuki-tcg-cards.csv  azuki-training-spec.md  azuki_cards_from_csv.json  cards.schema.md  effects-and-spells-plan.md  game-info.md  main-phase-todo.md  next-steps-todo.md  obs-info.text  tcg-images.json
apps/web/: .env.example  .gitignore  README.md  next.config.ts  package.json  tsconfig.json
apps/web/src/: middleware.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/contexts/: AssetContext.tsx  AuthContext.tsx  GameStateContext.tsx  RoomContext.tsx  WebSocketContext.tsx
apps/web/src/hooks/: useCountdown.ts  useDecks.ts  useRoomConnection.ts  useWebSocket.ts
apps/web/src/lib/: cookies.ts  env.ts
apps/web/src/stores/: dragStore.ts
apps/web/src/types/: game.ts  gameLogs.ts
apps/websocket/: .env.example  .env.test  .gitignore  README.md  package.json  tsconfig.json  vitest.config.ts
apps/websocket/native/: binding.gyp
apps/websocket/native/src/: addon.c
apps/websocket/scripts/: copy-native.js  run-integration-tests.ts  test-engine.ts
apps/websocket/src/: env.ts  server.ts
apps/websocket/src/clients/: index.ts
apps/websocket/src/constants/: index.ts
apps/websocket/src/engine/: EngineBinding.ts  WorldManager.ts  actionResolutionService.ts  aiOpponentService.ts  gameActionHandler.ts  gameLogService.ts  gameOverHandler.ts  index.ts  logProcessor.ts  snapshotGenerator.ts
apps/websocket/src/errors/: index.ts
apps/websocket/src/handlers/: roomMessageHandler.ts  stateTransitionHandler.ts
apps/websocket/src/logger/: index.ts
apps/websocket/src/services/: WebSocketService.ts  index.ts  inferenceClient.ts
apps/websocket/src/state/: ConnectionRegistry.ts  RoomRegistry.ts  TimerManager.ts  types.ts
apps/websocket/src/utils/: broadcast.ts  index.ts
apps/websocket/tests/: README.md  setup.ts
apps/websocket/tests/integration/: auth.test.ts  decks.test.ts  engine-integration.test.ts  game-flow.test.ts  rooms.test.ts  websocket.test.ts
apps/websocket/tests/utils/: TestClient.ts  database.ts  fixtures.ts  helpers.ts
docker/: .env.example  migrate.Dockerfile  web.Dockerfile  ws.Dockerfile  ws.debug.Dockerfile  ws.debug.nosan.Dockerfile
include/: components.h  world.h
include/abilities/: ability.h  ability_registry.h  ability_runtime.h  ability_system.h
include/abilities/cards/: st01_007.h  stt01_001.h  stt01_002.h  stt01_003.h  stt01_004.h  stt01_005.h  stt01_006.h  stt01_008.h  stt01_009.h  stt01_011.h  stt01_012.h  stt01_013.h  stt01_014.h  stt01_015.h  stt01_016.h  stt01_017.h  stt02_001.h  stt02_002.h  stt02_003.h  stt02_005.h  stt02_007.h  stt02_009.h  stt02_010.h  stt02_011.h  stt02_012.h  stt02_013.h  stt02_014.h  stt02_015.h  stt02_016.h  stt02_017.h
include/azuki/: engine.h  zone_types.h
include/components/: abilities.h  components.h  game_log.h
include/constants/: game.h  world.h
include/queries/: card_zone.h  main.h
include/systems/: ability_resolution_phase.h  card_state.h  combat_resolve_phase.h  economy.h  end_phase.h  main.h  main_action.h  main_phase.h  mulligan.h  mulligan_phase.h  phase_gate.h  phase_management.h  response_phase.h  start_phase.h
include/utils/: actions_util.h  card_utils.h  cli_rendering_util.h  combat_util.h  damage_util.h  debug_log.h  deck_utils.h  entity_util.h  game_log_util.h  observation_util.h  phase_utils.h  player_util.h  status_util.h  training_observation_util.h  weapon_util.h  zone_util.h
include/validation/: action_enumerator.h  action_intents.h  action_schema.h  action_validation.h
logs/: .c2cfd5ff4438cf4a1c5de8abc4327f15e20c991f-audit.json
python/: AGENT.md  pyproject.toml
python/config/: ability_static_metadata.json  azuki.ini  azuki_speed_3090.ini  azuki_speed_3090_parallel.ini
python/src/: CMakeLists.txt  action.py  binding.c  env_binding.h  evaluate_checkpoint.py  inference_sidecar.py  league_eval.py  league_manager.py  league_ratings.py  league_state.py  league_training.py  obs_debug.py  observation.py  playback.py  tcg.h  tcg.py  tcg_native.py  tcg_parallel.py  test.py  train.py  training_utils.py
python/src/policy/: static_card_table.py  tcg_distribution.py  tcg_policy.py  tcg_sampler.py
python/tests/: test_league_manager.py  test_league_state.py  test_league_training_utils.py
scripts/: azuki-card-defs.jsonl  generate_card_defs.py  wait_for_cuda.sh
src/: azuki_engine.c  components.c  components.h  main.c  world.c
src/abilities/: ability_registry.c  ability_runtime.c  ability_system.c
src/abilities/cards/: st01_007.c  stt01_001.c  stt01_002.c  stt01_003.c  stt01_004.c  stt01_005.c  stt01_006.c  stt01_008.c  stt01_009.c  stt01_011.c  stt01_012.c  stt01_013.c  stt01_014.c  stt01_015.c  stt01_016.c  stt01_017.c  stt02_001.c  stt02_002.c  stt02_003.c  stt02_005.c  stt02_007.c  stt02_009.c  stt02_010.c  stt02_011.c  stt02_012.c  stt02_013.c  stt02_014.c  stt02_015.c  stt02_016.c  stt02_017.c
src/components/: abilities.c  components.c  game_log.c
src/queries/: card_zone.c  main.c
src/systems/: ability_resolution_phase.c  card_state.c  combat_resolve_phase.c  economy.c  end_phase.c  main.c  main_action.c  main_phase.c  mulligan.c  mulligan_phase.c  phase_gate.c  phase_management.c  response_phase.c  start_phase.c
src/utils/: actions_util.c  card_utils.c  cli_rendering_util.c  combat_util.c  damage_util.c  debug_log.c  deck_utils.c  entity_util.c  game_log_util.c  observation_util.c  phase_utils.c  player_util.c  status_util.c  training_observation_util.c  weapon_util.c  zone_util.c
src/validation/: action_enumerator.c  action_schema.c  action_validation.c
tests/: test_world.c
tools/: queue_profile.c
(+85 files in other folders)
